@@ -19,6 +19,7 @@ Improvements
 - policy.suffix: update the aho-corasick code (#200)
 - root hints are now loaded from a zonefile; exposed as hints.root_file().
   You can override the path by defining ROOTHINTS during compilation.
+- policy.FORWARD: work around resolvers adding unsigned NS records (#248)
 
 
 Knot Resolver 1.3.3 (2017-08-09)
